--- a/client/style.css
+++ b/client/style.css
@@ -14,6 +14,16 @@ ul, li, h1, p {
 
 /* Custom styles */
 
+body {
+  background-color: rgb(219, 219, 219);
+}
+
+header {
+  width: 100%;
+text-align: center;
+margin-bottom: 20px
+;}
+
 .form-wrapper {
   max-width: 500px;
   display: flex;
@@ -21,6 +31,7 @@ ul, li, h1, p {
 
   /* border: 1px solid black; */
   margin: 0 auto;
+  margin-bottom: 20px;
 
 }
 
@@ -47,4 +58,83 @@ ul, li, h1, p {
 
 textarea {
   resize: none;
+}
+
+
+
+.show-more {
+  padding-top: 10px;
+  text-align: center;
+  display: none;
+}
+.show-more-btn {
+  display: inline;
+}
+
+.messages {
+  margin: 0 auto;
+  display: flex;
+  width: 100%;
+  max-width: 800px;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.message {
+  width: 90%;
+  margin-left: auto;
+  max-width: 600px;
+  border-radius: 10px;
+  background-color: rgb(163, 163, 163);
+  padding: 10px 20px 10px 20px;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.message:nth-child(odd) {
+  align-self: flex-start;
+  background-color: rgb(196, 196, 196);
+}
+.message:nth-child(even) {
+  align-self: flex-end;
+}
+
+.message:nth-child(odd) p{
+  align-self: flex-start;
+}
+.message:nth-child(even) p{
+  align-self: flex-end;
+}
+
+.message:nth-child(odd) .p-message{
+  width: 90%;
+  text-align: right;
+  align-self: flex-end;
+}
+.message:nth-child(even) .p-message{
+  width: 90%;
+  text-align: left;
+  align-self: flex-start;
+}
+
+p {
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.p-name {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.p-date {
+  color: rgb(107, 107, 107);
+}
+
+.show-more-btn {
+  background-color: white;
+  margin-bottom: 10px;
 }
