--- a/client/style.css
+++ b/client/style.css
@@ -21,7 +21,10 @@ body {
 header {
   width: 100%;
 text-align: center;
-margin-bottom: 20px
+margin-bottom: 20px;
+border: 1px solid gold;
+background-color: rgb(175, 175, 175);
+
 ;}
 
 .form-wrapper {
