--- a/client/style.css
+++ b/client/style.css
@@ -29,6 +29,7 @@ background-color: rgb(175, 175, 175);
 
 .form-wrapper {
   max-width: 500px;
+  width: 90%;
   display: flex;
   align-items: flex-end;
 
