--- a/client/style.css
+++ b/client/style.css
@@ -1,13 +1,9 @@
 /* Normalize styles minified */
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 
 /* CSS Reset */
 
 *, *::before, *::after {
   box-sizing: border-box;
-}
-
-ul, li, h1, p {
   margin: 0;
   padding: 0;
 }
@@ -16,6 +12,7 @@ ul, li, h1, p {
 
 body {
   background-color: rgb(219, 219, 219);
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 header {
@@ -48,10 +45,33 @@ background-color: rgb(175, 175, 175);
   /* border: 1px solid black */
 }
 
-.submit-btn {
-  height: 103px;
-  background-color: white;
+/* fix for firefox number of rows with overflow */
+textarea {
+  overflow-x:hidden;
+  resize: none;
+}
+
+input, textarea {
+  padding: 5px;
   border-radius: 5px;
+  outline: none;
+  border-left: 2px solid rgb(134, 134, 134);
+  border-top: 2px solid rgb(134, 134, 134);
+  border-right: 2px solid rgb(233, 233, 233);
+  border-bottom: 2px solid rgb(233, 233, 233);
+}
+
+.submit-btn {
+  height: 120px;
+  background-color: white;
+  outline: none;
+  padding: 5px;
+  border-radius: 5px;
+  border-color: rgb(185, 185, 185) rgb(88, 88, 88) rgb(88, 88, 88) rgb(185, 185, 185);
+}
+
+.submit-btn:active {
+  border-color: rgb(88, 88, 88) rgb(185, 185, 185) rgb(185, 185, 185) rgb(88, 88, 88);
 }
 
 .loading {
@@ -60,19 +80,24 @@ background-color: rgb(175, 175, 175);
   display: block;
 }
 
-textarea {
-  resize: none;
-}
-
-
-
 .show-more {
   padding-top: 10px;
   text-align: center;
   display: none;
 }
+
 .show-more-btn {
-  display: inline;
+  height: auto;
+  background-color: white;
+  width: 60%;
+  outline: none;
+  padding: 5px;
+  border-radius: 5px;
+  border-color: rgb(185, 185, 185) rgb(88, 88, 88) rgb(88, 88, 88) rgb(185, 185, 185);
+}
+
+.show-more-btn:active {
+  border-color: rgb(88, 88, 88) rgb(185, 185, 185) rgb(185, 185, 185) rgb(88, 88, 88);
 }
 
 .messages {
